--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
             color: #555;
         }
 
+        /* Added style for the new subtitle */
+        .subtitle {
+            margin-top: -10px; /* Adjust as needed to pull it closer to the title */
+            margin-bottom: 20px;
+            font-size: 0.9em;
+            color: #666;
+        }
+        .subtitle a {
+            color: #5cb85c;
+            text-decoration: none;
+        }
+        .subtitle a:hover {
+            text-decoration: underline;
+        }
+
+
         .container {
             max-width: 950px; /* Slightly wider for the table */
             margin: 0 auto;
@@ -199,6 +215,7 @@
 
     <div class="container">
         <h1>NuttyB Raptors Settings Generator</h1>
+        <p class="subtitle">Inspired by <a href="https://docs.google.com/spreadsheets/d/1QSVsuAAMhBrhiZdTihVfSCwPzbbZWDLCtXWP23CU0ko/edit" target="_blank">The Paste Machine</a></p>
 
         <div class="tabs">
             <button class="tab-button active" data-tab="config">Configuration</button>
@@ -419,7 +436,7 @@ $welcome-message Lobby settings made with the Paste Machine https://docs.google.
                 evolvingCommanders: { label: "NuttyB Evolving Commanders", type: "checkbox", commandBlocks: [], default: true, disabled: false, column: 'left' },
                 tweakdefs2: { label: "Raptor Health", type: "select", choices: [], column: 'left' },
                 tweakdefs1: { label: "Queen Health", type: "select", choices: [], column: 'left' },
-                extraRaptors: { label: "Extra Raptors", type: "select", choices: [{ label: "None", value: "", shortLabel: "" }], column: 'left' }, // Add "None" option with empty shortLabel
+                extraRaptors: { label: "Extra Raptors", type: "select", choices: [{ label: "None", value: "", shortLabel: "" }] }, // Add "None" option with empty shortLabel
                 otherCheckboxes: { type: "checkboxes", options: [], column: 'right' } // This is a virtual group for sorting, actual items will be separate
             };
 
@@ -671,11 +688,10 @@ $welcome-message Lobby settings made with the Paste Machine https://docs.google.
             }
 
             // After all other commands are placed, add the rename command
-            // If section1Commands is not full with the remaining commands, add rename to section 1.
-            // Otherwise, add it to section 2.
-            if (currentLengthSection1 + renameCommand.length + 1 <= MAX_SECTION_LENGTH) { // Check if it fits in section 1
+            // If it fits in section1 (with its current content)
+            if (currentLengthSection1 + renameCommand.length + 1 <= MAX_SECTION_LENGTH) {
                 section1Commands.push(renameCommand);
-            } else { // If not, it goes to section 2
+            } else { // Otherwise, it goes to section 2
                 section2Commands.push(renameCommand);
             }
 
@@ -694,8 +710,7 @@ $welcome-message Lobby settings made with the Paste Machine https://docs.google.
             rightColumn.innerHTML = '';
 
             // Add initial loading message (if desired, or remove if fast enough)
-            // leftColumn.innerHTML = '<p>Loading configuration data...</p>';
-
+            leftColumn.innerHTML = '<p>Loading configuration data...</p>'; // Restore loading message to left column
 
             formOptionsConfig.forEach(optionGroup => {
                 const label = document.createElement('label');
@@ -716,24 +731,26 @@ $welcome-message Lobby settings made with the Paste Machine https://docs.google.
                         inputElement.addEventListener('change', updateOutput);
                     }
 
+
                 } else if (optionGroup.type === 'select') {
                     inputElement = document.createElement('select'); // It's a select, not an input
                     inputElement.dataset.optionType = optionGroup.label; // Identify the group
 
                     optionGroup.choices.forEach(choice => {
                         const optionElement = document.createElement('option');
-                        optionElement.value = choice.value;
-                        optionElement.textContent = choice.label;
-                        optionElement.selected = choice.selected || false;
+                        optionElement.value = choice.value; // Store the command block as the value
+                        optionElement.textContent = choice.label; // Display the label to the user
+                        optionElement.selected = choice.selected || false; // Set selected state
+                        // Store shortLabel on the option element for easy access in generateCommands
                         optionElement.dataset.shortLabel = choice.shortLabel || "";
-                        inputElement.appendChild(optionElement); // Append option to select
+                        select.appendChild(optionElement);
                     });
 
-                    label.textContent = optionGroup.label + ': '; // Label for the dropdown group
-                    label.appendChild(inputElement); // Append select to label
+                    label.appendChild(select);
+                    optionsForm.appendChild(label);
 
                     // Add event listener
-                    inputElement.addEventListener('change', updateOutput);
+                    select.addEventListener('change', updateOutput);
                 }
                 // Determine which column to append to
                 if (optionGroup.column === 'right') {
