--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         #left-column label,
         #right-column label {
             display: block;
-            margin-bottom: 8px; /* Increased margin for better separation */
+            margin-bottom: 8px; /* Reduced margin for tighter spacing */
             cursor: pointer;
         }
 
@@ -202,7 +202,7 @@
 
     <div class="container">
         <h1>NuttyB Raptors Settings Generator</h1>
-        <p>Inspired by <a href="https://docs.google.com/spreadsheets/d/1QSVsuAAMhBrhiZdTihVfSCwPzbbZWDLCtXWP23CU0ko/edit" target="_blank">The Paste Machine</a></p>
+        <p>Inspired by <a href="https://docs.google.com/spreadsheets/d/1QSVsuAAMhBrhiZdTihVfSCwPzbbZWDLCtXWP23CU0ko/edit" target="_blank">The Paste Machine</a>.</p>
 
         <div class="tabs">
             <button class="tab-button active" data-tab="config">Configuration</button>
@@ -326,7 +326,7 @@
 !unit_restrictions_nonukes 0
 !draft_mode disabled
 !unit_restrictions_notacnukes 0
-$welcome-message Lobby settings made with the Paste Machine https://docs.google.com/sheets/d/1QSVsuAAMhBrhiZdTihVfSCwPzbbZWDLCtXWP23CU0ko
+$welcome-message Settings made with Config Generator https://rcorex.github.io/nuttyb-config/
 !unit_market 0
 !evocom 0
 !nowasting all
@@ -569,6 +569,7 @@ $welcome-message Lobby settings made with the Paste Machine https://docs.google.
              });
         }
 
+
         // 4. Function to generate the command string and lobby name
         function generateCommands() {
             let coreCommands = []; // Array to store each command line (excluding rename for now)
@@ -682,68 +683,6 @@ $welcome-message Lobby settings made with the Paste Machine https://docs.google.
                 section1Commands.push(renameCommand);
             } else {
                 // This case happens if section 1 is almost full and section 2 is empty.
-                section2Commands.push(renameCommand);
-            }
-
-
-            return {
-                lobbyName: renameCommand,
-                section1: section1Commands.join('\n'),
-                section2: section2Commands.join('\n')
-            };
-        }
-        
-            // --- Construct the rename command ---
-            let renameCommand = `$rename [Mod] NuttyB Raptors`;
-            let renameParts = [];
-
-            if (extraRaptorsPart) {
-                renameParts.push(extraRaptorsPart); // extraRaptorsPart already includes brackets like "[Mini Bosses]"
-            }
-
-            // Combine Raptor and Queen Health parts if they exist
-            let combinedHealthPart = "";
-            if (raptorHealthPart && queenHealthPart) {
-                 combinedHealthPart = `${raptorHealthPart} ${queenHealthPart}`;
-            } else if (raptorHealthPart) {
-                 combinedHealthPart = raptorHealthPart;
-            } else if (queenHealthPart) {
-                 combinedHealthPart = queenHealthPart;
-            }
-
-            if (combinedHealthPart) {
-                 renameParts.push(`[${combinedHealthPart}]`); // Add brackets around the combined health part
-            }
-
-            if (renameParts.length > 0) {
-                renameCommand += ' ' + renameParts.join(''); // Join parts directly with no space between them
-            }
-
-            renameCommand += `[No Mex]`; // Assuming [No Mex] is always included
-
-            // --- Splitting logic adjusted to prioritize rename in section 1 if it fits ---
-            let section1Commands = [];
-            let section2Commands = [];
-            let currentLengthSection1 = 0;
-
-            // Iterate through core commands first
-            for (let i = 0; i < coreCommands.length; i++) {
-                const command = coreCommands[i];
-                // Check if adding this command AND the rename command (plus separators) will exceed the limit
-                // This is the key change to prioritize rename in section 1
-                if (currentLengthSection1 + command.length + 1 + renameCommand.length + 1 <= MAX_SECTION_LENGTH) {
-                    section1Commands.push(command);
-                    currentLengthSection1 += command.length + 1;
-                } else {
-                    section2Commands.push(command);
-                }
-            }
-
-            // After all other commands are placed, add the rename command
-            // If it fits in section 1, add it there. Otherwise, add it to section 2.
-            if (currentLengthSection1 + renameCommand.length + 1 <= MAX_SECTION_LENGTH) {
-                section1Commands.push(renameCommand);
-            } else {
                 section2Commands.push(renameCommand);
             }
 
