--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
             <div class="output-container">
                 <h2>Generated Commands</h2>
-                <p>Copy and Paste both parts separately.</p>
+                <p>Copy and Paste part 1 and 2 separately.</p>
 
                 <div class="command-output-section">
                     <h3>Part 1</h3>
