--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <div class="container">
         <h1>NuttyB Raptors Settings Generator</h1>
-        <p>Inspired by <a href="https://docs.google.com/spreadsheets/d/1QSVsuAAMhBrhiZdTihVfSCwPzbbZWDLCtXWP23CU0ko/edit" target="_blank">The Paste Machine</a>.</p>
+        <p>Inspired by <a href="https://docs.google.com/spreadsheets/d/1QSVsuAAMhBrhiZdTihVfSCwPzbbZWDLCtXWP23CU0ko/edit" target="_blank">The Paste Machine</a></p>
 
         <div class="tabs">
             <button class="tab-button active" data-tab="config">Configuration</button>
